--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,3 +6,6 @@ export(pickFeatures_bmdk)
 export(read_bmdk)
 importFrom(OutlierDetection,nn)
 importFrom(magrittr,"%>%")
+importFrom(stats,cor)
+importFrom(stats,t.test)
+importFrom(stats,wilcox.test)
