Update C++ code calling
Passes R CMD CHECK

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,7 @@ License: MIT + file LICENSE
 LazyData: true
 Imports:
     magrittr, Rcpp
+LinkingTo: Rcpp
 Suggests: 
     testthat
-RoxygenNote: 7.1.0
+RoxygenNote: 7.1.1
