--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(read_bmdk)
 importFrom(Rcpp,evalCpp)
 importFrom(magrittr,"%>%")
 importFrom(stats,cor)
+importFrom(stats,ks.test)
 importFrom(stats,sd)
 importFrom(stats,t.test)
 importFrom(stats,wilcox.test)
